--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,109 @@ body {
 a {
   color: #00B7FF;
 }
+.navbar-brand
+{
+  font-family: Trattatello, fantasy;
+  font-size: 20pt;
+}
+.card-body
+{
+  text-align: center;
+}
+
+.jumbotron
+{
+  width: 100%;
+  font-size: 20px;
+}
+.jumbotron
+{
+  margin: 20px auto 20px auto;
+  max-width: 50%;
+}
+#contactBanner
+{
+  height: 50vh;
+  min-height: 300px;
+  background-image: url('webPics/martini.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#MenuBanner
+{
+  height: 50vh;
+  min-height: 300px;
+  background-image: url('webPics/Matcha.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#home
+{
+  height: 50vh;
+  min-height: 300px;
+  background-image: url('images/ssw.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#reservations
+{
+  height: 50vh;
+  min-height: 300px;
+  background-image: url('webPics/Seaweed Salad.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#takeout
+{
+  height: 50vh;
+  min-height: 300px;
+  background-image: url('webPics/blackcod.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.list-group
+{
+  margin: auto;
+  width: 25%;
+}
+.list-group h5
+{
+  text-align: center;
+}
+.form-group
+{
+  width: 90%;
+}
+.form
+{
+  width: 90%;
+  background: #0f0f0f;
+}
+#menu
+{
+  margin: 30px auto;
+  width: 40%;
+  background: grey;
+  text-align: center;
+}
+#contact
+{
+  border-radius: 5px;
+  padding: 30px;
+  background: #3c3c3c;
+  width: 30%;
+  margin: 40px auto 40px auto;
+  color: white;
+}
+.btn btn-primary
+{
+  background: rgb(175,210,7);
+  border: none
+}
+
