--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,7 @@ a {
 {
   height: 50vh;
   min-height: 300px;
-  background-image: url('images/ssw.jpg');
+  background-image: url('images/salad.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
