--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,8 @@ a {
 {
   height: 50vh;
   min-height: 300px;
-  background-image: url('images/salad.jpeg');
+  /*background-image: url('/images/salad.jpeg');*/
+  background-color: #00B7FF;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -90,6 +91,13 @@ a {
   width: 90%;
   background: #0f0f0f;
 }
+.logo-image{
+  width: 4px;
+  height: 4px;
+  border-radius: 10%;
+  overflow: hidden;
+  margin-top: -6px;
+}
 #menu
 {
   margin: 30px auto;
@@ -111,4 +119,5 @@ a {
   background: rgb(175,210,7);
   border: none
 }
+
 
