--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 24px;
+  font: 22px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -26,53 +26,67 @@ a {
   margin: 20px auto 20px auto;
   max-width: 50%;
 }
-#contactBanner
-{
+/*#contactBanner*/
+/*{*/
+/*  height: 50vh;*/
+/*  min-height: 300px;*/
+/*  background-image: url('webPics/martini.jpg');*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  background-repeat: no-repeat;*/
+/*}*/
+
+/*#MenuBanner*/
+/*{*/
+/*  height: 50vh;*/
+/*  min-height: 300px;*/
+/*  background-image: url('/images/salad.jpeg');*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  background-repeat: no-repeat;*/
+/*}*/
+
+.home{
   height: 50vh;
   min-height: 300px;
-  background-image: url('webPics/martini.jpg');
+  background-image: url('/images/salad.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-#MenuBanner
-{
-  height: 50vh;
-  min-height: 300px;
-  background-image: url('webPics/Matcha.jpg');
+.color{
+  background: url('/images/kitchen.jpg') no-repeat center center fixed;
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  height: 100%;
+  overflow: hidden;
+  image-resolution: inherit;
 }
-#home
-{
-  height: 50vh;
-  min-height: 300px;
-  /*background-image: url('/images/salad.jpeg');*/
-  background-color: #00B7FF;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+.socialtext{
+  text-align: center;
+  color: white;
 }
-#reservations
-{
-  height: 50vh;
-  min-height: 300px;
-  background-image: url('webPics/Seaweed Salad.jpeg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-#takeout
-{
-  height: 50vh;
-  min-height: 300px;
-  background-image: url('webPics/blackcod.jpeg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+
+/*#reservations*/
+/*{*/
+/*  height: 50vh;*/
+/*  min-height: 300px;*/
+/*  background-image: url('webPics/Seaweed Salad.jpeg');*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  background-repeat: no-repeat;*/
+/*}*/
+
+/*#takeout*/
+/*{*/
+/*  height: 50vh;*/
+/*  min-height: 300px;*/
+/*  background-image: url('webPics/blackcod.jpeg');*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  background-repeat: no-repeat;*/
+/*}*/
+
 .list-group
 {
   margin: auto;
@@ -82,15 +96,16 @@ a {
 {
   text-align: center;
 }
-.form-group
-{
-  width: 90%;
-}
-.form
-{
-  width: 90%;
-  background: #0f0f0f;
-}
+/*.form-group*/
+/*{*/
+/*  width: 90%;*/
+/*}*/
+/*.form*/
+/*{*/
+/*  width: 90%;*/
+/*  background: #0f0f0f;*/
+/*}*/
+
 .logo-image{
   width: 4px;
   height: 4px;
@@ -98,26 +113,63 @@ a {
   overflow: hidden;
   margin-top: -6px;
 }
-#menu
-{
-  margin: 30px auto;
-  width: 40%;
-  background: grey;
+/*#menu*/
+/*{*/
+/*  margin: 30px auto;*/
+/*  width: 40%;*/
+/*  background: grey;*/
+/*  text-align: center;*/
+/*}*/
+
+/*#contact*/
+/*{*/
+/*  border-radius: 5px;*/
+/*  padding: 30px;*/
+/*  background: #3c3c3c;*/
+/*  width: 30%;*/
+/*  margin: 40px auto 40px auto;*/
+/*  color: white;*/
+/*}*/
+
+/*.btn btn-primary*/
+/*{*/
+/*  background: rgb(175,210,7);*/
+/*  border: none*/
+/*}*/
+
+
+
+
+/*Menu*/
+
+.center {
+  /*margin-left: auto;*/
+  /*margin-right: auto;*/
+  display: flex;
+  /*vertical-align: center;*/
+  /*horizontal-align: center;*/
+  /*text-align: center;*/
+  /*justify-content: center;*/
+  align-items: center;
+}
+.title{
   text-align: center;
-}
-#contact
-{
-  border-radius: 5px;
-  padding: 30px;
-  background: #3c3c3c;
-  width: 30%;
-  margin: 40px auto 40px auto;
-  color: white;
-}
-.btn btn-primary
-{
-  background: rgb(175,210,7);
-  border: none
+  /*margin-left: auto;*/
+  width: 35%;
+  font-size: 28px;
+  font-family:cursive;
+
 }
 
+/*.cals{*/
+/*  text-align: right;*/
+/*  width: 25%;*/
+/*  font-size: 20px;*/
+/*}*/
+.picture{
+  align-content: center;
+  justify-content: center;
+
+
+}
 
