--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,7 @@ a {
   font-family: Trattatello, fantasy;
   font-size: 20pt;
 }
+
 .card-body
 {
   text-align: center;
@@ -18,41 +19,31 @@ a {
 
 .jumbotron
 {
-  width: 100%;
-  font-size: 20px;
-}
-.jumbotron
-{
   margin: 20px auto 20px auto;
   max-width: 50%;
 }
-/*#contactBanner*/
-/*{*/
-/*  height: 50vh;*/
-/*  min-height: 300px;*/
-/*  background-image: url('webPics/martini.jpg');*/
-/*  background-size: cover;*/
-/*  background-position: center;*/
-/*  background-repeat: no-repeat;*/
-/*}*/
 
-/*#MenuBanner*/
-/*{*/
-/*  height: 50vh;*/
-/*  min-height: 300px;*/
-/*  background-image: url('/images/salad.jpeg');*/
-/*  background-size: cover;*/
-/*  background-position: center;*/
-/*  background-repeat: no-repeat;*/
-/*}*/
+.forms{
+text-align: left;
+}
 
 .home{
   height: 50vh;
   min-height: 300px;
-  background-image: url('/images/salad.jpeg');
+  background-image: url('/images/Whitekitchen.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.Dining{
+  height: 50vh;
+  min-height: 300px;
+  background-image: url('/images/venue.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  image-resolution: inherit;
 }
 
 .color{
@@ -62,49 +53,26 @@ a {
   overflow: hidden;
   image-resolution: inherit;
 }
+
+.backgroundcolor{
+  background-color: azure;
+}
+
 .socialtext{
   text-align: center;
   color: white;
 }
-
-/*#reservations*/
-/*{*/
-/*  height: 50vh;*/
-/*  min-height: 300px;*/
-/*  background-image: url('webPics/Seaweed Salad.jpeg');*/
-/*  background-size: cover;*/
-/*  background-position: center;*/
-/*  background-repeat: no-repeat;*/
-/*}*/
-
-/*#takeout*/
-/*{*/
-/*  height: 50vh;*/
-/*  min-height: 300px;*/
-/*  background-image: url('webPics/blackcod.jpeg');*/
-/*  background-size: cover;*/
-/*  background-position: center;*/
-/*  background-repeat: no-repeat;*/
-/*}*/
 
 .list-group
 {
   margin: auto;
   width: 25%;
 }
+
 .list-group h5
 {
   text-align: center;
 }
-/*.form-group*/
-/*{*/
-/*  width: 90%;*/
-/*}*/
-/*.form*/
-/*{*/
-/*  width: 90%;*/
-/*  background: #0f0f0f;*/
-/*}*/
 
 .logo-image{
   width: 4px;
@@ -113,63 +81,26 @@ a {
   overflow: hidden;
   margin-top: -6px;
 }
-/*#menu*/
-/*{*/
-/*  margin: 30px auto;*/
-/*  width: 40%;*/
-/*  background: grey;*/
-/*  text-align: center;*/
-/*}*/
-
-/*#contact*/
-/*{*/
-/*  border-radius: 5px;*/
-/*  padding: 30px;*/
-/*  background: #3c3c3c;*/
-/*  width: 30%;*/
-/*  margin: 40px auto 40px auto;*/
-/*  color: white;*/
-/*}*/
-
-/*.btn btn-primary*/
-/*{*/
-/*  background: rgb(175,210,7);*/
-/*  border: none*/
-/*}*/
-
-
-
-
-/*Menu*/
 
 .center {
-  /*margin-left: auto;*/
-  /*margin-right: auto;*/
   display: flex;
-  /*vertical-align: center;*/
-  /*horizontal-align: center;*/
-  /*text-align: center;*/
-  /*justify-content: center;*/
   align-items: center;
 }
 .title{
   text-align: center;
-  /*margin-left: auto;*/
   width: 35%;
   font-size: 28px;
   font-family:cursive;
-
+  color: darkslategray;
 }
-
-/*.cals{*/
-/*  text-align: right;*/
-/*  width: 25%;*/
-/*  font-size: 20px;*/
-/*}*/
 .picture{
   align-content: center;
   justify-content: center;
+}
 
-
+.DarkBlue{
+  text-align: center;
+  color: #3b5998;
+  font-family: "Britannic Bold";
 }
 
